--- a/src/app/cabecera/cabecera.component.html
+++ b/src/app/cabecera/cabecera.component.html
@@ -1,13 +1,13 @@
-<!--<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
   <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/cf/Angular_full_color_logo.svg/1200px-Angular_full_color_logo.svg.png" height="52px">
   
   <a class="navbar-brand" href="#">
     Nombre del dominio o logo</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation" (click)="isShown = !isShown">
     <span class="navbar-toggler-icon"></span>
   </button>
 
-  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+  <div class="collapse navbar-collapse" id="navbarSupportedContent" [ngClass]="{ 'show': isShown }">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
         <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
@@ -21,8 +21,8 @@
       <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
     </form>
   </div>
-</nav>-->
-
+</nav>
+<!--
 <nav class="navbar navbar-dark bg-dark navbar-expand-lg">
   <div class="container-fluid px-0">
     <div class="row w-100">
@@ -52,4 +52,4 @@
       </div>
     </div>
   </div>
-</nav>
+</nav>-->
