centrado de card

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,8 +1,12 @@
-<div class="card" style="width: 18rem;">
-  
-  <div class="card-body">
-    <h5 class="card-title">Home2</h5>
-    
-    <a href="./pagina" class="btn btn-primary">Component pagina</a>
+<div class="container">
+  <div class="row">
+    <div class="card" style="width: 18rem;">
+      
+      <div class="card-body">
+        <h5 class="card-title">Home</h5>
+        
+        <a href="./pagina" class="btn btn-primary">Component pagina</a>
+      </div>
+    </div>
   </div>
 </div>
