--- a/src/app/pagina/pagina.component.html
+++ b/src/app/pagina/pagina.component.html
@@ -3,20 +3,29 @@
     <div class="card" style="width: 100%;">
       
       <div class="card-body">
-        <h5 class="card-title">
-          https://www.w3schools.com/bootstrap4/bootstrap_icons.asp
-          <br>
-          https://fontawesome.com/icons?d=gallery&m=free
+        <h2 class="card-title">
+          Verion bootstrap 3
+        </h2>
+        <p>
 
-        </h5>
+          Primer paso importar las imagenes
+          agregar el tag <b>link</b> directamente en el <b>index.html </b> 
+          <a href="https://www.w3schools.com/bootstrap4/bootstrap_icons.asp">https://www.w3schools.com/bootstrap4/bootstrap_icons.asp</a>
+        </p>
+        <p>
+           las etiquetas <b>i</b> con su correpondiente class se pueden buscar en la siguiente pagina 
+           <a href="https://fontawesome.com/icons?d=gallery&m=free">https://fontawesome.com/icons?d=gallery&m=free</a>
+
+        </p>
         
         <div>
-          <i class="fas fa-cloud"></i>
+          <i class="fas fa-cloud" style="color:red;  padding:2px;"></i>
           <i class="fas fa-coffee"></i>
-          <i class="fas fa-car"></i>
+          <i class="fas fa-car" style="color:blue;  padding:2px;"></i>
           <i class="fas fa-file"></i>
-          <i class="fas fa-bars"></i>
+          <i class="fas fa-bars" style="color:gray; font-size:30px; padding:2px;"></i>
           <i class="far fa-address-book"></i>
+          <i class="far fa-grin-tongue-squint" style="color:gray; font-size:150px; padding:2px;"></i>
           </div>
 
       </div>
@@ -29,7 +38,13 @@
     <div class="card" style="width: 100%;">
       
       <div class="card-body">
-        <h5 class="card-title">https://fontawesome.com/icons?d=gallery&m=free</h5>
+        <h2 class="card-title">
+          Verion bootstrap 4
+        </h2>
+        <p>
+          Buscar ditectemente el icono dentro de la pagina y copiar el tag <b>sgv</b>
+        <p><a href="https://icons.getbootstrap.com"> 
+        https://icons.getbootstrap.com</a></p>
 
 
 <svg class="bi bi-alarm" width="25px" height="25px" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
@@ -40,7 +55,7 @@
   <path d="M7 1h2v2H7V1z"/>
 </svg>
 
-<svg class="bi bi-alarm" width="50px" height="50px" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+<svg class="bi bi-alarm" width="50px" height="50px" style="color:red;" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
   <path fill-rule="evenodd" d="M8 15A6 6 0 1 0 8 3a6 6 0 0 0 0 12zm0 1A7 7 0 1 0 8 2a7 7 0 0 0 0 14z"/>
   <path fill-rule="evenodd" d="M8 4.5a.5.5 0 0 1 .5.5v4a.5.5 0 0 1-.053.224l-1.5 3a.5.5 0 1 1-.894-.448L7.5 8.882V5a.5.5 0 0 1 .5-.5z"/>
   <path d="M.86 5.387A2.5 2.5 0 1 1 4.387 1.86 8.035 8.035 0 0 0 .86 5.387zM11.613 1.86a2.5 2.5 0 1 1 3.527 3.527 8.035 8.035 0 0 0-3.527-3.527z"/>
@@ -52,7 +67,7 @@
   <path fill-rule="evenodd" d="M0 3a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v10a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V3zm9.5 5.5h-3a.5.5 0 0 0 0 1h3a.5.5 0 0 0 0-1zm-6.354-.354L4.793 6.5 3.146 4.854a.5.5 0 1 1 .708-.708l2 2a.5.5 0 0 1 0 .708l-2 2a.5.5 0 0 1-.708-.708z"/>
 </svg>
 
-<svg class="bi bi-terminal-fill" width="3em" height="3em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+<svg class="bi bi-terminal-fill" width="10em" height="10em" style="color:gray;"viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
   <path fill-rule="evenodd" d="M0 3a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v10a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V3zm9.5 5.5h-3a.5.5 0 0 0 0 1h3a.5.5 0 0 0 0-1zm-6.354-.354L4.793 6.5 3.146 4.854a.5.5 0 1 1 .708-.708l2 2a.5.5 0 0 1 0 .708l-2 2a.5.5 0 0 1-.708-.708z"/>
 </svg>
 
