--- a/src/app/pie/pie.component.html
+++ b/src/app/pie/pie.component.html
@@ -1,4 +1,4 @@
-<footer class="text-muted" style="background:grey; color:black;position: absolute; bottom: 0px; rigth:0px; width: 100%;">
+<!--<footer class="text-muted" style="background:grey; color:black;position: absolute; bottom: 0px; rigth:0px; width: 100%;">
   <div class="container">
     <div class="row" style="color:black;">
     <div class="col-12 col-sm-8"><p>Programacion III</p></div>
@@ -7,4 +7,4 @@
     
     
   </div>
-</footer>
+</footer>-->
